@@ -4,6 +4,8 @@ import org.quartz.spi.JobFactory;
 
 import com.google.inject.AbstractModule;
 
+import io.mangoo.cache.CacheProvider;
+import io.mangoo.interfaces.MangooCache;
 import io.mangoo.scheduler.MangooJobFactory;
 
 /**
@@ -15,5 +17,6 @@ public class Modules extends AbstractModule {
     @Override
     protected void configure() {
         bind(JobFactory.class).to(MangooJobFactory.class);
+        bind(MangooCache.class).toProvider(CacheProvider.class);
     }
 }
